add the library.js, video.htm files

--- a/GroundStation/src/main/resources/templates/index.html
+++ b/GroundStation/src/main/resources/templates/index.html
@@ -1,15 +1,15 @@
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 
 <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-
+ 
+ </title> DroneShield </title>
 </head>
 
 <body>  
-  <h1>
-    droneShield cloud app is online    
-  </h1>
+  <h1> droneShield cloud app is online </h1>
 
-	</div>
-</body>
+</body>z
+</html>
